--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-plugin-named-asset-import": "^0.3.7",
     "babel-preset-react-app": "^10.0.0",
     "bfj": "^7.0.2",
+    "bootstrap": "^5.0.2",
     "camelcase": "^6.1.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "css-loader": "4.3.0",
@@ -69,6 +70,7 @@
     "react-redux": "^7.2.4",
     "react-refresh": "^0.8.3",
     "react-router-dom": "^5.2.0",
+    "react-validation": "^3.0.7",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
     "resolve": "1.18.1",
@@ -81,6 +83,7 @@
     "ts-pnp": "1.2.0",
     "typescript": "^4.0.3",
     "url-loader": "4.1.1",
+    "validator": "^13.6.0",
     "web-vitals": "^0.2.4",
     "webpack": "4.44.2",
     "webpack-dev-server": "3.11.0",
@@ -88,7 +91,7 @@
     "workbox-webpack-plugin": "5.1.4"
   },
   "scripts": {
-    "start": "set port=9000 && node scripts/start.js",
+    "start": "set port=3000 && node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
     "deploy": "sh scripts/deploy.sh"
